--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,17 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Gonzalo Salinas - Front-End / UI designer">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<h1>Welcome to <span>Astro</span></h1>
+
+
 	</main>
 </Layout>
 
 <style>
 	main {
+		background-color: var(--red);
 		margin: auto;
 		padding: 1.5rem;
 		max-width: 60ch;
