--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
 	<main>
 		<h1>Welcome to <span>Astro</span></h1>
 
-
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus quidem ducimus, asperiores eius in eum voluptatibus maiores aperiam, iure numquam commodi atque voluptas recusandae, cupiditate expedita. Quis quam dolorem mollitia.	</p>
 	</main>
 </Layout>
 
